# cube

./: Cargo.toml  README.md  config.sample.toml  flake.nix  module.nix  overlay.nix  package.nix
.github/workflows/: nix.yaml  release.yml
src/: config.rs  error.rs  main.rs
