[package]
name = "nbs"
version = "0.1.0"
edition = "2021"

[dependencies]
nbd = { version = "0.2.3", git = "https://github.com/icewind1991/rust-nbd" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
thiserror = "1.0.38"
miette = "5.5.0"
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.2"
clap = { version = "4.1.6", features = ["derive"] }
signal-hook = "0.3.15"