[package]
name = "cube"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
nbd = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.57"
miette = "7.0.0"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
clap = { version = "=4.4.18", features = ["derive"] } # unlock once we have 1.74
signal-hook = "0.3.17"
